[project]
name = "vulners-mcp"
version = "1.0.3"
description = "MCP interface server fronting the Vulners API (https://vulners.com)"
readme = "README.md"
authors = [{name = "Vulners Team", email = "dev@vulners.com"}]
keywords = ["MCP", "security", "network", "vulners", "vulnerability", "CVE"]
requires-python = ">=3.14,<4.0"
dependencies = [
    "mcp[cli]>=1.26.0,<2.0",
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.12.5,<3.0",
    "starlette>=0.52.0,<1.0",
    "uvicorn>=0.40.0,<1.0",
    "fastmcp>=2.14.5,<3.0",
    "pydantic-settings>=2.12.0,<3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true