[project]
name = "vulners-mcp"
version = "1.0.4"
description = "MCP interface server fronting the Vulners API (https://vulners.com)"
readme = "README.md"
authors = [{name = "Vulners Team", email = "dev@vulners.com"}]
keywords = ["MCP", "security", "network", "vulners", "vulnerability", "CVE"]
requires-python = ">=3.14,<4.0"
dependencies = [
    "mcp[cli]>=1.26.0,<2.0",
    "httpx>=0.28.1,<1.0",
    "pydantic>=2.12.5,<3.0",
    "fastmcp>=2.14.5,<3.0",
    "pydantic-settings>=2.13.1,<3.0",
]

[project.optional-dependencies]
prometheus = ["prometheus_client>=0.24.1"]
statsd = ["statsd>=4.0.1"]
metrics = ["prometheus_client>=0.24.1", "statsd>=4.0.1"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "prometheus_client>=0.24.1",
    "statsd>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.hatch.metadata]
allow-direct-references = true